@@ -31,7 +31,7 @@ You can use L<Log::Dispatch>, or any log system which will output into L<Log::Di
 
 As simple as using the command line interface:
 
-    logstash --input ZeroMQ --input_options '{"socket_bind":"tcp://192.168.0.1:5558"}' \
+    message-passing --input ZeroMQ --input_options '{"socket_bind":"tcp://192.168.0.1:5558"}' \
         --output File --output_options '{"filename":"/tmp/mylog"}'
 
 And you've now got a multi-host log aggregation system for your application!
@@ -40,7 +40,7 @@ And you've now got a multi-host log aggregation system for your application!
 
 Assuming that you've got a regular syslogd setup and working, then you probably want to keep that.
 Having B<some of> the log files on individual hosts can be very useful. Also, we'd like to avoid
-logstash being a privileged user (which would be needed to get the standard port).
+the script being a privileged user (which would be needed to get the standard port).
 
 Therefore, we'll run a syslog listener on a high port (5140), and get the regular syslogd to ship
 messages to it. The listener will then forward from each host to a central aggregate logger
@@ -48,7 +48,7 @@ messages to it. The listener will then forward from each host to a central aggre
 
 =head2 On host collector
 
-    logstash --input Syslog --output ZeroMQ --output_options '{"connect":"tcp://192.168.0.1:5558"}' 
+    message-passing --input Syslog --output ZeroMQ --output_options '{"connect":"tcp://192.168.0.1:5558"}' 
 
 =head2 Configuring your syslogd
 
@@ -63,6 +63,8 @@ If you have hosts with both applications and syslog that you want to aggregate, 
 do both at once. This also means that your apps ship logs to a local buffer process rather than
 directly across the network - which is more resilient to short network outages.
 
-This
+=head1 AUTHOR, COPYRIGHT & LICENSE
+
+See L<Message::Passing>.
 
 =cut
